--- a/JavaApplication11/nbproject/project.properties
+++ b/JavaApplication11/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Agronomia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.postgresql-42.2.5.jar=C:\\Users\\8\\Documents\\NetBeansProjects\\AnagramGame\\hospital\\hospital\\src\\bibliotecas\\postgresql-42.2.5.jar
+file.reference.postgresql-42.2.5.jar-1=src\\biblioteca\\postgresql-42.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.2.5.jar}
+    ${file.reference.postgresql-42.2.5.jar}:\
+    ${file.reference.postgresql-42.2.5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
